# bindizr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.Debian.md  README.md  bindizr.conf  bindizr.conf.toml  bindizr.db  clippy.toml  docker-compose.test.yml  docker-compose.yml  renovate.json
.cargo/: config.toml
.cr-release-packages/: bindizr-stack-0.1.0-beta.4.tgz  index.yaml
.github/workflows/: build_test.yaml  ci.yaml  ci.yml  manual-release.yml  release.yml  test.yaml  update-github-pages.yml  update-openapi-docs.yml
charts/bindizr-stack/: Chart.yaml  README.md  values.yaml
crates/bindizr/: Cargo.toml  README.md
crates/bindizr-core/: Cargo.toml  README.md
crates/bindizr-core/src/: lib.rs
crates/bindizr-core/src/config/: mod.rs  tests.rs
crates/bindizr-core/src/dns/: mod.rs  name.rs  record.rs  txt.rs
crates/bindizr-core/src/dns/name/: mod.rs  tests.rs
crates/bindizr-core/src/dns/record/: mod.rs  tests.rs
crates/bindizr-core/src/dns/txt/: mod.rs  tests.rs
crates/bindizr-core/src/logger/: mod.rs
crates/bindizr-core/src/model/: api_token.rs  catalog_zone_state.rs  mod.rs  record.rs  zone.rs  zone_change.rs
crates/bindizr-db/: Cargo.toml  README.md
crates/bindizr-db/src/: error.rs  lib.rs  schema.rs  utils.rs
crates/bindizr-db/src/database/: mod.rs  schema.rs  utils.rs
crates/bindizr-db/src/database/repository/: mod.rs
crates/bindizr-db/src/database/repository/mysql/: api_token_repository_impl.rs  zone_snapshot_repository_impl.rs
crates/bindizr-db/src/database/repository/postgres/: api_token_repository_impl.rs  mod.rs  record_repository_impl.rs  zone_change_repository_impl.rs  zone_repository_impl.rs  zone_snapshot_repository_impl.rs
crates/bindizr-db/src/database/repository/sqlite/: zone_snapshot_repository_impl.rs
crates/bindizr-db/src/repository/: mod.rs
crates/bindizr-db/src/repository/mysql/: api_token_repository_impl.rs  catalog_zone_state_repository_impl.rs  mod.rs  record_repository_impl.rs  zone_change_repository_impl.rs  zone_repository_impl.rs  zone_snapshot_repository_impl.rs
crates/bindizr-db/src/repository/postgres/: api_token_repository_impl.rs  catalog_zone_state_repository_impl.rs  mod.rs  record_repository_impl.rs  zone_change_repository_impl.rs  zone_repository_impl.rs  zone_snapshot_repository_impl.rs
crates/bindizr-db/src/repository/sqlite/: api_token_repository_impl.rs  catalog_zone_state_repository_impl.rs  mod.rs  record_repository_impl.rs  zone_change_repository_impl.rs  zone_repository_impl.rs  zone_snapshot_repository_impl.rs
crates/bindizr-db/src/service/: error.rs  mod.rs  notify.rs  repository.rs
crates/bindizr-db/src/service/record/: create.rs  delete.rs  get.rs  update.rs  validation.rs
crates/bindizr-db/src/service/zone/: create.rs  delete.rs  get.rs  update.rs
crates/bindizr-db/src/utils/: mod.rs  tests.rs
crates/bindizr-dns/: Cargo.toml  README.md
crates/bindizr-dns/src/: acl.rs  address.rs  lib.rs  protocol.rs
crates/bindizr-dns/src/acl/: mod.rs  tests.rs
crates/bindizr-dns/src/address/: mod.rs  tests.rs
crates/bindizr-dns/src/nsupdate/: auth.rs  mod.rs  parser.rs  prerequisite.rs  tests.rs  update.rs
crates/bindizr-dns/src/nsupdate/auth/: mod.rs  tests.rs
crates/bindizr-dns/src/nsupdate/parser/: mod.rs  tests.rs
crates/bindizr-dns/src/nsupdate/update/: mod.rs  tests.rs
crates/bindizr-dns/src/soa/: mod.rs
crates/bindizr-dns/src/xfr/: axfr.rs  catalog.rs  delta.rs  error.rs  ixfr.rs  mod.rs  notify.rs  wire.rs
crates/bindizr-dns/src/xfr/catalog/: mod.rs  tests.rs
crates/bindizr-dns/src/xfr/ixfr/: mod.rs  tests.rs
crates/bindizr-dns/src/xfr/notify/: mod.rs  tests.rs
crates/bindizr-dns/src/xfr/wire/: mod.rs  tests.rs
crates/bindizr-e2e/: Cargo.toml  README.md  docker-compose.yml
crates/bindizr-e2e/tests/: api.rs  dns.rs  e2e.rs
crates/bindizr-e2e/tests/api/: common.rs  general.rs  notify.rs  record.rs  zone.rs
crates/bindizr-e2e/tests/cli/: record.rs  zone.rs
crates/bindizr-e2e/tests/common/: assertions.rs  dns.rs  mod.rs  notify.rs
crates/bindizr-e2e/tests/common/dns/: mod.rs  tests.rs
crates/bindizr-service/: Cargo.toml  README.md
crates/bindizr-service/src/: auth.rs  lib.rs  notify.rs  pagination.rs  repository.rs  serial.rs  token.rs  types.rs  utils.rs  validation.rs
crates/bindizr-service/src/record/: create.rs  delete.rs  get.rs  mod.rs  update.rs  validation.rs
crates/bindizr-service/src/record/get/: mod.rs  tests.rs
crates/bindizr-service/src/record/validation/: mod.rs  record_value.rs  tests.rs
crates/bindizr-service/src/record/validation/record_value/: a.rs  aaaa.rs  cname.rs  common.rs  mod.rs  mx.rs  ns.rs  ptr.rs  soa.rs  srv.rs  txt.rs
crates/bindizr-service/src/token/: mod.rs  tests.rs
crates/bindizr-service/src/zone/: catalog_zone_state.rs  create.rs  delete.rs  force.rs  get.rs  mod.rs  snapshot.rs  update.rs  validation.rs
crates/bindizr/src/: lib.rs  main.rs
crates/bindizr/src/api/: dto.rs  error.rs  mod.rs  notify.rs  openapi.rs  record.rs  router.rs  types.rs  zone.rs
crates/bindizr/src/api/middleware/: auth.rs  body_parser.rs  mod.rs
crates/bindizr/src/cli/: mod.rs
crates/bindizr/src/cli/commands/: create.rs  delete.rs  get.rs  mod.rs  notify.rs  start.rs  status.rs  token.rs
crates/bindizr/src/cli/output/: format.rs  mod.rs  table.rs
crates/bindizr/src/error/: mod.rs
crates/bindizr/src/socket/: dto.rs  mod.rs  socket.rs  types.rs
crates/bindizr/src/socket/client/: mod.rs
crates/bindizr/src/socket/server/: mod.rs  notify.rs  record.rs  status.rs  tests.rs  token.rs  zone.rs
crates/bindizr/tests/api/: mod.rs  notify.rs  record.rs  zone.rs
crates/bindizr/tests/common/: mod.rs
crates/bindizr/tests/fixture/: bindizr.conf.toml
docker/: bindizr.conf.toml  entrypoint.sh
docker/bind9/: named.conf  named.swarm.conf.template
docker/dnsdist/: dnsdist.conf
docs/: index.html  openapi.yaml
packaging/: README.md  bindizr.service
scripts/: build_packages.sh  postremove.sh  setup_bind.sh  setup_bind_rndc.sh
src/: lib.rs  main.rs
src/api/: dto.rs  (+10 more)
tests/: integration_tests.rs
(+264 files in other folders)
