[package]
name = "bindizr"
version = "0.1.0-beta.2"
edition = "2024"
authors = ["kweonminsung"]
description = "DNS Synchronization Service for BIND9"
repository = "https://github.com/kweonminsung/bindizr"
license = "Apache-2.0"
keywords = ["DNS", "BIND9", "CLI", "RNDC", "Rust"]

[lib]
name = "bindizr"
path = "src/lib.rs"

[[bin]]
name = "bindizr"
path = "src/main.rs"

[profile.release]
panic = "unwind"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
axum-macros = "0.5.0"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.11"
once_cell = "1.21.3"
async-trait = "0.1.88"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
] }
rndc = "0.1.4"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.21.0"
tower = "0.5"
tower-service = "0.3"
