[workspace]
members = [
    "crates/bindizr",
    "crates/bindizr-core",
    "crates/bindizr-db",
    "crates/bindizr-dns",
]
resolver = "3"

[workspace.package]
version = "0.1.0-beta.3"
edition = "2024"
authors = ["kweonminsung"]
description = "DNS Synchronization Service for BIND9"
repository = "https://github.com/kweonminsung/bindizr"
license = "Apache-2.0"
keywords = ["DNS", "BIND9", "CLI", "XFR"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
axum-macros = "0.5.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
domain = "0.12"
hmac = "0.13"
hex = "0.4"
log = { version = "0.4", features = ["std"] }
once_cell = "1.21.4"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
] }
tabled = "0.20"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.11", features = ["cors"] }
tower-service = "0.3"
utoipa = { version = "5.5", features = ["axum_extras", "yaml"] }

[profile.release]
panic = "unwind"
