[package]
name = "bindizr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core models, configuration, DNS record types, and logging utilities for bindizr"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bindizr-core"
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
config.workspace = true
log.workspace = true
once_cell.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
