[package]
name = "bindizr-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Database repositories for bindizr"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bindizr-db"
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bindizr-core = { path = "../bindizr-core", version = "0.1.0-beta.5" }
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true
