[package]
name = "bindizr"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "bindizr"
path = "src/lib.rs"

[[bin]]
name = "bindizr"
path = "src/main.rs"

[dependencies]
bindizr-core = { path = "../bindizr-core", version = "0.1.0-beta.5" }
bindizr-db = { path = "../bindizr-db", version = "0.1.0-beta.5" }
bindizr-dns = { path = "../bindizr-dns", version = "0.1.0-beta.5" }
bindizr-service = { path = "../bindizr-service", version = "0.1.0-beta.5" }
async-trait.workspace = true
axum.workspace = true
axum-macros.workspace = true
clap.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
utoipa.workspace = true

[dev-dependencies]
tempfile.workspace = true
